test/spec_vectors/memory_fill64/fail/module_22.wat
(module (memory i64 1 1) (func (export "testfn") (memory.fill (i32.const 10) (f64.const 20) (f32.const 30))))